syntax = "proto3";

option csharp_namespace = "MicroBase.PlatformService.Api";

service GrpcPlatform{
	rpc GetAllRequest (GrpcPlatformModel) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel{
	int32 platformId = 1;
	string name = 2;
	string publisher = 3;
}

message PlatformResponse{
	repeated GrpcPlatformModel platforms = 1;
}